syntax = "proto3";
package tss.v1beta1;

option go_package = "github.com/axelarnetwork/axelar-core/x/tss/types";

import "gogoproto/gogo.proto";
import "tss/exported/v1beta1/types.proto";
import "tofnd/tofnd.proto";
import "vote/exported/v1beta1/types.proto";

option (gogoproto.goproto_getters_all) = false;
option (gogoproto.marshaler_all) = false;
option (gogoproto.unmarshaler_all) = false;
option (gogoproto.sizer_all) = false;

// MsgAssignNextKey represents a message to assign a new key
message MsgAssignNextKey {
  string sender = 1;
  string chain = 2;
  string key_id = 3 [ (gogoproto.customname) = "KeyID" ];
  exported.v1beta1.KeyRole key_role = 4;
}

// MsgDeregister to deregister so that the validator will not participate in any
// future keygen
message MsgDeregister { string sender = 1; }

// MsgKeygenStart indicate the start of keygen
message MsgKeygenStart {
  string sender = 1;
  string new_key_id = 2 [ (gogoproto.customname) = "NewKeyID" ];
  int64 subset_size = 3;
}

message MsgRotateKey {
  string sender = 1;
  string chain = 2;
  int64 subset_size = 3;
  exported.v1beta1.KeyRole key_role = 4;
}

// MsgKeygenTraffic protocol message
message MsgKeygenTraffic {
  string sender = 1;
  string session_id = 2 [ (gogoproto.customname) = "SessionID" ];
  tofnd.TrafficOut payload = 3;
}

// MsgSignTraffic protocol message
message MsgSignTraffic {
  string sender = 1;
  string session_id = 2 [ (gogoproto.customname) = "SessionID" ];
  tofnd.TrafficOut payload = 3;
}

// MsgVotePubKey represents the message to vote on a public key
message MsgVotePubKey {
  string sender = 1;
  vote.exported.v1beta1.PollMeta poll_meta = 2 [ (gogoproto.nullable) = false ];
  // need to vote on the bytes instead of ecdsa.PublicKey, otherwise we lose the
  // elliptic curve information
  bytes pub_key_bytes = 3;
}

// MsgVoteSig represents a message to vote for a signature
message MsgVoteSig {
  string sender = 1;
  vote.exported.v1beta1.PollMeta poll_meta = 2 [ (gogoproto.nullable) = false ];
  // need to vote on the bytes instead of r, s, because Go cannot deserialize
  // private fields using reflection (so *big.Int does not work)
  bytes sig_bytes = 3;
}
